--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/02_attention.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/02_attention.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOKEB+UsEPnTScYUdceq0Ql",
+      "authorship_tag": "ABX9TyOHhDOazThL2fkKmmFC+3wJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,7 @@
       ],
       "metadata": {
         "id": "wlXOl_Holz6M",
-        "outputId": "481fd898-b730-4bd1-c8d0-d6db1a79287e",
+        "outputId": "7ddcd514-e32a-4d8c-9fb6-55579608b1b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -167,7 +167,7 @@
       ],
       "metadata": {
         "id": "tfnZyAI5nVL0",
-        "outputId": "660006db-3aa1-4004-9260-057a0b5a22e9",
+        "outputId": "c8e8acb3-3744-4dc5-c038-59cc07b2a9d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -205,7 +205,7 @@
       ],
       "metadata": {
         "id": "ND78M8VHnj7w",
-        "outputId": "8f71d27d-5a27-4fa4-e242-6ff42bcd96a3",
+        "outputId": "fc52af48-d04c-4161-a2d3-b794049e250c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -275,7 +275,7 @@
       ],
       "metadata": {
         "id": "uLYCNOICACwv",
-        "outputId": "a700a4b7-a9d1-4011-afe7-b5e4d1b9990e",
+        "outputId": "13705109-4a24-4ba5-d2b0-c3348d0d8e5a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -385,7 +385,7 @@
       ],
       "metadata": {
         "id": "0TL0qt6iG4j2",
-        "outputId": "e3dec995-758b-4e09-e919-65191eecb71d",
+        "outputId": "04277c04-591f-4f78-889a-e079c22177df",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -443,7 +443,7 @@
       ],
       "metadata": {
         "id": "-2xSmTDYHlTL",
-        "outputId": "7c41df66-df34-4270-d42e-4fa109a65cfa",
+        "outputId": "aa22f181-f3b4-493d-f4de-e478d361383d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -617,7 +617,7 @@
       ],
       "metadata": {
         "id": "fgMpzO1_Cdx1",
-        "outputId": "0b88c421-9cd8-45d1-e1e4-f007a2868b69",
+        "outputId": "199fedcc-6155-4010-ee94-91fb38d269a7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -695,7 +695,7 @@
       ],
       "metadata": {
         "id": "v8JKnoukC_Eo",
-        "outputId": "5952fc05-7b94-42b3-dd2b-0d1277470282",
+        "outputId": "69b7463f-6061-4fee-e452-ad0d3d9a98da",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -768,7 +768,7 @@
       ],
       "metadata": {
         "id": "U7THbRPfR4tO",
-        "outputId": "64fb64a7-3d7d-4511-b14c-20b8e1b7c6de",
+        "outputId": "5d4125b0-a049-4d6c-e4a0-1b1eab4bd96d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -826,45 +826,74 @@
       "cell_type": "code",
       "source": [
         "class EncoderDecoder(nn.Module):\n",
-        "  "
+        "  def __init__(self, encoder, decoder, input_len, target_len, teacher_forcing_prob=0.5):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    self.encoder = encoder\n",
+        "    self.decoder = decoder\n",
+        "    self.input_len = input_len\n",
+        "    self.target_len = target_len\n",
+        "    self.teacher_forcing_prob = teacher_forcing_prob\n",
+        "    self.outputs = None\n",
+        "\n",
+        "  def init_outputs(self, batch_size):\n",
+        "    device = next(self.parameters()).device\n",
+        "    # N, L (target), F\n",
+        "    self.outputs = torch.zeros(batch_size,\n",
+        "                               self.target_len,\n",
+        "                               self.encoder.n_features).to(device) \n",
+        "\n",
+        "  def store_output(self, idx, output):\n",
+        "    # Stores the output\n",
+        "    self.outputs[:, idx: idx + 1, :] = output\n",
+        "\n",
+        "  def forward(self, X):\n",
+        "    # splits the data in source and target sequences\n",
+        "    # the target seq will be empty in testing mode\n",
+        "    # N, L, F\n",
+        "    source_seq = X[:, : self.input_len, :]\n",
+        "    target_seq = X[:, self.input_len:, :]\n",
+        "    self.init_outputs(X.shape[0])\n",
+        "\n",
+        "    # Encoder expected N, L, F\n",
+        "    hidden_seq = self.encoder(source_seq)\n",
+        "    # Output is N, L, H\n",
+        "    self.decoder.init_hidden(hidden_seq)\n",
+        "\n",
+        "    # The last input of the encoder is also the first input of the decoder\n",
+        "    decoder_inputs = source_seq[:, -1:, :]\n",
+        "\n",
+        "    # Generates as many outputs as the target length\n",
+        "    for i in range(self.target_len):\n",
+        "      # Output of decoder is N, 1, F\n",
+        "      output = self.decoder(decoder_inputs)\n",
+        "      self.store_output(i, output)\n",
+        "\n",
+        "      prob = self.teacher_forcing_prob\n",
+        "      # In evaluation/test the target sequence is unknown, so we cannot use teacher forcing\n",
+        "      if not self.training:\n",
+        "        prob = 0\n",
+        "\n",
+        "      # If it is teacher forcing\n",
+        "      if torch.rand(1) <= prob:\n",
+        "        # Takes the actual element\n",
+        "        decoder_inputs = target_seq[:, i: i + 1, :]\n",
+        "      else:\n",
+        "        # Otherwise uses the last predicted output\n",
+        "        decoder_inputs = output\n",
+        "\n",
+        "    return self.outputs"
       ],
       "metadata": {
-        "id": "3j6coSQ3KXoY",
-        "outputId": "7a6c5a44-6143-43b2-9629-ff40834724c5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "3j6coSQ3KXoY"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "OrderedDict([('weight_ih_l0',\n",
-              "              tensor([[ 0.6627, -0.4245],\n",
-              "                      [ 0.5373,  0.2294]])),\n",
-              "             ('weight_hh_l0',\n",
-              "              tensor([[-0.4015, -0.5385],\n",
-              "                      [-0.1956, -0.6835]])),\n",
-              "             ('bias_ih_l0', tensor([0.4954, 0.6533])),\n",
-              "             ('bias_hh_l0', tensor([-0.3565, -0.2904]))])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 22
-        }
-      ]
+      "execution_count": 16,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Let’s illustrate the differences between shapes by creating a \"batch\" containing\n",
-        "three sequences, each having four data points (corners), with each data point\n",
-        "having two coordinates. \n",
-        "\n",
-        "Its shape is (3, 4, 2), and it is an example of a batch-first\n",
-        "tensor (N, L, F), like a mini-batch you’d get from a data loader:"
+        "Let’s create an instance of the model."
       ],
       "metadata": {
         "id": "cZxqSpBXLYQ_"
@@ -873,43 +902,19 @@
     {
       "cell_type": "code",
       "source": [
-        "batch = torch.as_tensor(points[:3]).float()\n",
-        "batch.shape"
+        "encoder_decoder = EncoderDecoder(encoder, decoder, input_len=2, target_len=2, teacher_forcing_prob=0.5)"
       ],
       "metadata": {
-        "id": "PVz1tloOLbiF",
-        "outputId": "d2b1e52b-3252-4580-a768-e2f0b2434efd",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "PVz1tloOLbiF"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-23-2a03d7664898>:1: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at ../torch/csrc/utils/tensor_new.cpp:245.)\n",
-            "  batch = torch.as_tensor(points[:3]).float()\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "torch.Size([3, 4, 2])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 23
-        }
-      ]
+      "execution_count": 17,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Since RNNs use sequence-first by default, we could explicitly change the shape of\n",
-        "the batch using `permute()` to flip the first two dimensions:"
+        "In training mode, the model expects the full sequence so it can randomly use\n",
+        "teacher forcing:"
       ],
       "metadata": {
         "id": "8u9Zd7eSMllT"
@@ -918,35 +923,35 @@
     {
       "cell_type": "code",
       "source": [
-        "permuted_batch = batch.permute(1, 0, 2)\n",
-        "permuted_batch.shape"
+        "encoder_decoder.train()\n",
+        "encoder_decoder(full_seq)"
       ],
       "metadata": {
         "id": "zfYuoj0oMnRG",
-        "outputId": "104e07c9-c767-436d-a5e3-638f98b10c99",
+        "outputId": "34c3a2d8-fb0c-40d2-9ac4-dcf8331253e9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "torch.Size([4, 3, 2])"
+              "tensor([[[0.3205, 0.1144],\n",
+              "         [0.2905, 0.1976]]], grad_fn=<CopySlices>)"
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 18
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Now the data is in an \"RNN-friendly\" shape, and we can run it through a regular\n",
-        "RNN to get two sequence-first tensors back:"
+        "In evaluation / test mode, though, it only needs the source sequence as input:"
       ],
       "metadata": {
         "id": "AS05-ItQM2sT"
@@ -955,160 +960,35 @@
     {
       "cell_type": "code",
       "source": [
-        "torch.manual_seed(19)\n",
-        "\n",
-        "rnn = nn.RNN(input_size=n_features, hidden_size=hidden_dim)\n",
-        "output, final_hidden = rnn(permuted_batch)\n",
-        "output.shape, final_hidden.shape"
+        "encoder_decoder.eval()\n",
+        "encoder_decoder(source_seq)"
       ],
       "metadata": {
         "id": "_ooNCvYAM38u",
-        "outputId": "5453aa45-5dce-48c1-d7d5-c91e74803643",
+        "outputId": "6388fcc3-f465-4e19-df73-5d38e32a21a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(torch.Size([4, 3, 2]), torch.Size([1, 3, 2]))"
+              "tensor([[[0.3205, 0.1144],\n",
+              "         [0.2905, 0.1976]]], grad_fn=<CopySlices>)"
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 19
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "For simple RNNs, the last element of the output is the final\n",
-        "hidden state!"
-      ],
-      "metadata": {
-        "id": "OzGvm7zdOaGO"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "(output[-1] == final_hidden).all()"
-      ],
-      "metadata": {
-        "id": "R57WlKgCObf5",
-        "outputId": "370c355a-87b0-472b-cd1c-22c33f0f6bda",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor(True)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 26
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Once we’re done with the RNN, we can turn the data back to our familiar batchfirst\n",
-        "shape:"
-      ],
-      "metadata": {
-        "id": "6-p4kTiJOtB7"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "batch_hidden = final_hidden.permute(1, 0, 2)\n",
-        "batch.shape"
-      ],
-      "metadata": {
-        "id": "0bg45LM1OthD",
-        "outputId": "59bbee7b-7bb5-47f2-f97e-163d88c9a2f2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "torch.Size([3, 4, 2])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 27
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Alternatively, we could set the RNN’s `batch_first` argument to True so we can use the batch above without any\n",
-        "modifications:"
-      ],
-      "metadata": {
-        "id": "mm3u7clGPErs"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "torch.manual_seed(19)\n",
-        "\n",
-        "rnn_batch_first = nn.RNN(input_size=n_features, hidden_size=hidden_dim, batch_first=True)\n",
-        "output, final_hidden = rnn_batch_first(batch)\n",
-        "output.shape, final_hidden.shape"
-      ],
-      "metadata": {
-        "id": "08pO4WNQPIYY",
-        "outputId": "0b0a3f02-3838-4d80-8bae-8c683fcb7941",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(torch.Size([3, 4, 2]), torch.Size([1, 3, 2]))"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 28
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "On the one hand, this can lead to confusion. On the other hand, most of the time we\n",
-        "won’t be handling the hidden state, and we’ll handle the batch-first output instead."
-      ],
-      "metadata": {
-        "id": "4wyaGw7YPnUo"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "###Stacked RNN"
+        "###Data Preparation"
       ],
       "metadata": {
         "id": "hjMNAej2P07D"
@@ -1116,20 +996,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "First, take one RNN and feed it a sequence of data points. Next, take another RNN\n",
-        "and feed it the sequence of outputs produced by the first RNN. There you go—you\n",
-        "have a stacked RNN where each of the RNNs is considered a \"layer\" of the stacked\n",
-        "one.\n",
-        "\n",
-        "![](https://github.com/rahiakela/deep-learning-research-and-practice/blob/main/deep-learning-with-pytorch-step-by-step/Part-III-NLP/images/stacked_rnn.png?raw=1)\n",
-        "\n",
-        "Each \"layer\" starts with its own initial hidden state and produces its own final\n",
-        "hidden state. The output of the stacked RNN—that is, the hidden states at each\n",
-        "step of the sequence—are the hidden states of the top-most layer.\n",
-        "\n",
-        "Let’s create a stacked RNN with two layers."
-      ],
+      "source": [],
       "metadata": {
         "id": "rvaL2jfyP14O"
       }
