--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/02_attention.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/02_attention.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMl7M8dQq7H/xHv6sidY6e8",
+      "authorship_tag": "ABX9TyMMsJf5CECKLDoPrjridjbH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,7 @@
       ],
       "metadata": {
         "id": "wlXOl_Holz6M",
-        "outputId": "ac7653f4-64a3-4571-d6d0-96d49220cd93",
+        "outputId": "258f0562-f1a0-4beb-bd25-7823977b6bb0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -167,7 +167,7 @@
       ],
       "metadata": {
         "id": "tfnZyAI5nVL0",
-        "outputId": "d070b7b6-5eb3-4953-92e8-993f9e5511a5",
+        "outputId": "e095b44f-e6db-4e6d-ba06-3d74a372eedc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -205,7 +205,7 @@
       ],
       "metadata": {
         "id": "ND78M8VHnj7w",
-        "outputId": "1340cc64-b123-4fd0-f119-46e4c5ff5d42",
+        "outputId": "4728b7af-5ce2-470c-9ae9-a9a06343e82c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -275,7 +275,7 @@
       ],
       "metadata": {
         "id": "uLYCNOICACwv",
-        "outputId": "d4125bd4-9d96-45f8-b402-79c8ac645f2d",
+        "outputId": "7c9931a3-03fe-4fd3-adc4-4153ed3e688c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 178
@@ -385,7 +385,7 @@
       ],
       "metadata": {
         "id": "0TL0qt6iG4j2",
-        "outputId": "6f58260b-9dbf-409e-f2cc-04876f255083",
+        "outputId": "7f26708a-5051-4718-fc19-ab2bf0142b5e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -443,7 +443,7 @@
       ],
       "metadata": {
         "id": "-2xSmTDYHlTL",
-        "outputId": "b808c38f-bcca-435a-9290-1d05b5399555",
+        "outputId": "df1eb8e1-8d6c-414c-b69a-67df1b3831f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -617,7 +617,7 @@
       ],
       "metadata": {
         "id": "fgMpzO1_Cdx1",
-        "outputId": "c6293ae1-7f30-4bdc-9b7c-6ada0967078e",
+        "outputId": "06fa4857-10dd-4da7-bb0a-aa2f56f2947b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -695,7 +695,7 @@
       ],
       "metadata": {
         "id": "v8JKnoukC_Eo",
-        "outputId": "4e1fd0aa-71f7-4a19-e7fd-c6b21ea26495",
+        "outputId": "eafa4346-746b-47bd-d0e5-44b735327c3d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -768,7 +768,7 @@
       ],
       "metadata": {
         "id": "U7THbRPfR4tO",
-        "outputId": "d08e4940-5be7-4fc5-c6c8-36f07bc6e65a",
+        "outputId": "2632d309-2191-4ea2-8ddf-8f30029f2e00",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -928,7 +928,7 @@
       ],
       "metadata": {
         "id": "zfYuoj0oMnRG",
-        "outputId": "e639e543-6ceb-419a-e552-2404b68fe114",
+        "outputId": "dd8b69f4-ae6c-4aa1-d4c0-2259d7d4ecb3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -965,7 +965,7 @@
       ],
       "metadata": {
         "id": "_ooNCvYAM38u",
-        "outputId": "c7063c98-8cd7-4f84-f742-fce408f42c31",
+        "outputId": "cbb1fd77-69be-4aa1-eea5-2ff5277b56b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1015,7 +1015,7 @@
       ],
       "metadata": {
         "id": "uMJ1tByQ6Wff",
-        "outputId": "ad7feed5-8bc3-484d-d46e-d9747a1edea1",
+        "outputId": "02c8fad3-664a-4030-bd46-d1f2df92d5d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1130,7 +1130,7 @@
       ],
       "metadata": {
         "id": "P2NfuqRcITgD",
-        "outputId": "912595fa-a39a-4a49-8ab2-d2b30b480a34",
+        "outputId": "80e3e07e-4479-4081-b652-be6a0b7fc9bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 349
@@ -1166,7 +1166,7 @@
       ],
       "metadata": {
         "id": "ITjKDaEHKhkv",
-        "outputId": "986d64df-e87f-4f44-9157-7f5cb3a4e1d5",
+        "outputId": "efc2e98b-dbce-470b-a187-e4fe854c837b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 354
@@ -1239,7 +1239,7 @@
       ],
       "metadata": {
         "id": "E18489UJVkUp",
-        "outputId": "8509ed72-26c8-4d8d-e9cb-e5933c104775",
+        "outputId": "e2e85104-b4fd-4760-9350-99ceefc98a46",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 484
@@ -1363,10 +1363,214 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Let’s go over a simple example using our own sequence-to-sequence\n",
+        "problem, and the \"perfect\" square as input."
+      ],
       "metadata": {
         "id": "Jcm8Um7AgWP4"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "full_seq = (torch.tensor([[-1, -1], [-1, 1], [1, 1], [1, -1]]).float().view(1, 4, 2))\n",
+        "\n",
+        "source_seq = full_seq[:, :2]\n",
+        "target_seq = full_seq[:, 2:]"
+      ],
+      "metadata": {
+        "id": "rcfzku6VvJBx"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The source sequence is the input of the encoder, and the hidden states it outputs are going to be both \"values\" ($V$) and \"keys\" ($K$):"
+      ],
+      "metadata": {
+        "id": "gZuTrCsnwH7h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(21)\n",
+        "\n",
+        "encoder = Encoder(n_features=2, hidden_dim=2)\n",
+        "hidden_seq = encoder(source_seq)  # encoder output\n",
+        "\n",
+        "values = hidden_seq  # N, L, H\n",
+        "values"
+      ],
+      "metadata": {
+        "id": "JAfprdWuwNol",
+        "outputId": "b88fb034-ec26-4493-e364-fa3eff2e5393",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[ 0.0832, -0.0356],\n",
+              "         [ 0.3105, -0.5263]]], grad_fn=<TransposeBackward1>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "keys = hidden_seq  # N, L, H\n",
+        "keys"
+      ],
+      "metadata": {
+        "id": "RuQh_OXtxb53",
+        "outputId": "94beccd7-e79d-4384-c3a5-5bebc289cf66",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[ 0.0832, -0.0356],\n",
+              "         [ 0.3105, -0.5263]]], grad_fn=<TransposeBackward1>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The encoder-decoder dynamics stay exactly the same: We still use the encoder’s\n",
+        "final hidden state as the decoder’s initial hidden state (even though we’re sending\n",
+        "the whole sequence to the decoder, it still uses the last hidden state only), and we\n",
+        "still use the last element of the source sequence as input to the first step of the\n",
+        "decoder:"
+      ],
+      "metadata": {
+        "id": "GclyHXwEzUm5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(21)\n",
+        "\n",
+        "decoder = Decoder(n_features=2, hidden_dim=2)\n",
+        "decoder.init_hidden(hidden_seq) # encoder output as decoder’s initial hidden state\n",
+        "\n",
+        "# last element of the source sequence as input to the first step of the decoder\n",
+        "inputs = source_seq[:, -1:]\n",
+        "output = decoder(inputs)"
+      ],
+      "metadata": {
+        "id": "pbH02bONzcrb"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The first \"query\" ($Q$) is the decoder’s hidden state (remember, hidden states are always sequence-first, so we’re permuting it to batch-first):"
+      ],
+      "metadata": {
+        "id": "sLhtRdH60yy1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "query = decoder.hidden_state.permute(1, 0, 2)  # N, 1, H\n",
+        "query"
+      ],
+      "metadata": {
+        "id": "-BK_YiuC01gv",
+        "outputId": "722cbe82-6af5-4b73-eef4-eca997242c85",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[ 0.8898, -0.3653]]], grad_fn=<PermuteBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "OK, we have the \"keys\" and a \"query,\" so let’s pretend we can compute attention scores (alphas) using them:"
+      ],
+      "metadata": {
+        "id": "c4qSpgeN1ZBM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def attention_score(key, query):\n",
+        "  N, L, H = key.size()\n",
+        "  scores = torch.ones(N, 1, L).float() * 1 / L\n",
+        "  return scores"
+      ],
+      "metadata": {
+        "id": "VRMXoc-_22ht"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scores = attention_score(keys, query)\n",
+        "scores"
+      ],
+      "metadata": {
+        "id": "zxUDj3XK3UZt",
+        "outputId": "dcd2ed79-4ef2-47f6-8e0a-9618230d8265",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[0.5000, 0.5000]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
     }
   ]
 }
